--- a/ws-nextjs-app/tsconfig.json
+++ b/ws-nextjs-app/tsconfig.json
@@ -1,8 +1,19 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
-  "exclude": ["node_modules", "build", "src/app/legacy/**/*"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "next.config.js",
+    "build/types/**/*.ts"
+  ],
+  "exclude": ["node_modules", "build"]
 }
